# p1_adr_jflr

./: README.md
ros2_ws/: .gitignore
ros2_ws/src/p1_adr_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/p1_adr_interfaces/srv/: Square.srv
ros2_ws/src/p1_adr_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/p1_adr_pkg/p1_adr_pkg/: gps_publisher.py  gps_subscriber.py  square_client.py  square_server.py
ros2_ws/src/p1_adr_pkg/srv/: Square.srv
ros2_ws/src/pr1_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/pr1_pkg/pr1_pkg/: gps_publisher.py  gps_subscriber.py
