<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>p1_adr_interfaces</name>
  <version>1.0.0</version>
  <description>
    Message, service, and action definitions for p1_adr_pkg.
  </description>
  <maintainer email="josloprui6@alum.us.es">Jose Francisco Lopez Ruiz</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tool and dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>std_msgs</depend>
  
  <!-- Execution dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>