<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>p1_adr_pkg</name>
  <version>1.0.0</version>
  <description>Paquete para la pr치ctica 1 de Ampliaci칩n de Rob칩tica</description>
  <maintainer email="josloprui6@alum.us.es">Jose Francisco L칩pez Ruiz</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>p1_adr_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
